implement GetNote handler
