# internal/api/notes.go
@@ -151,6 +151,40 @@ func (h *handler) DeleteNote(w http.ResponseWriter, r *http.Request) {
 	render.JSON(w, r, resp.Set("success", result))
 }
 
-func (h *handler) GetNote(w http.ResponseWriter, r *http.Request) {}
+// GetNote
+// @Summary			Get note by note ID.
+// @Description		Get note by note ID.
+// @Tags			Notes
+// @Produce			json
+// @Param			note_id			path			string	 true	"Note ID"
+// @Success			200 			{object}		utils.Response
+// @Failure			400				{object}		utils.Response
+// @Failure			401				{object}		utils.Response
+// @Failure			422				{object}		utils.Response
+// @Failure			500				{object}		utils.Response
+// @Router	/notes/{note_id} [get]
+func (h *handler) GetNote(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	resp := utils.NewResponse()
+
+	noteID := chi.URLParam(r, "note_id")
+	if noteID == "" {
+		render.Status(r, http.StatusNotFound)
+		render.JSON(w, r, resp.Set("note not found", nil))
+		return
+	}
+
+	note, err := h.usecase.GetNote(ctx, noteID)
+	if err != nil {
+		status, message := appErr.ErrStatusCode(err)
+
+		render.Status(r, status)
+		render.JSON(w, r, resp.Set(message, nil))
+		return
+	}
+
+	render.Status(r, http.StatusOK)
+	render.JSON(w, r, resp.Set("success", note))
+}
 
 func (h *handler) GetNoteList(w http.ResponseWriter, r *http.Request) {}
